--- a/Crizz/dockerfile
+++ b/Crizz/dockerfile
@@ -1,11 +1,11 @@
 
 FROM node:16
 
-WORKDIR /cricbuzz
+WORKDIR /
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install && npm build
 
 RUN npm start
 
